yamls/paperless/app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: paperless-ngx
  labels:
    app: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:1.16.5
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          volumeMounts:
          - name: paperless-pv
            mountPath: "/paperless"
      volumes:
        - name: paperless-pv
          persistentVolumeClaim:
            claimName: paperless-claim
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: paperless-tika
  labels:
    app: paperless-tika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-tika
  template:
    metadata:
      labels:
        app: paperless-tika
    spec:
      containers:
        - name: paperless-tika
          image: apache/tika:2.8.0.0
          ports:
            - name: http
              containerPort: 9998
