yamls/paperless/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
spec:
  selector:
    app: paperless-ngx
  ports:
    - protocol: TCP
      port: 8000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
spec:
  selector:
    app: paperless-tika
  ports:
    - protocol: TCP
      port: 9998
      name: http
